@@ -653,6 +653,7 @@ export(getBMRLearnerIds)
 export(getBMRLearners)
 export(getBMRMeasureIds)
 export(getBMRMeasures)
+export(getBMRModels)
 export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
