@@ -38,7 +38,7 @@ Other benchmark: \code{\link{benchmark}},
   \code{\link{getBMRLearnerIds}},
   \code{\link{getBMRLearners}},
   \code{\link{getBMRMeasureIds}},
-  \code{\link{getBMRMeasures}},
+  \code{\link{getBMRMeasures}}, \code{\link{getBMRModels}},
   \code{\link{getBMRPerformances}},
   \code{\link{getBMRPredictions}},
   \code{\link{getBMRTaskIds}},
