@@ -28,7 +28,7 @@ Other benchmark: \code{\link{BenchmarkResult}},
   \code{\link{getBMRFilteredFeatures}},
   \code{\link{getBMRLearners}},
   \code{\link{getBMRMeasureIds}},
-  \code{\link{getBMRMeasures}},
+  \code{\link{getBMRMeasures}}, \code{\link{getBMRModels}},
   \code{\link{getBMRPerformances}},
   \code{\link{getBMRPredictions}},
   \code{\link{getBMRTaskIds}},
