@@ -29,6 +29,7 @@ Other benchmark: \code{\link{BenchmarkResult}},
   \code{\link{getBMRLearnerIds}},
   \code{\link{getBMRLearners}},
   \code{\link{getBMRMeasureIds}},
+  \code{\link{getBMRModels}},
   \code{\link{getBMRPerformances}},
   \code{\link{getBMRPredictions}},
   \code{\link{getBMRTaskIds}},
