@@ -1,20 +1,30 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/BenchmarkResult_operators.R
-\name{getBMRTaskIds}
-\alias{getBMRTaskIds}
-\title{Return task ids used in benchmark.}
+\name{getBMRModels}
+\alias{getBMRModels}
+\title{Extract all models from benchmark result.}
 \usage{
-getBMRTaskIds(bmr)
+getBMRModels(bmr, task.ids = NULL, learner.ids = NULL)
 }
 \arguments{
 \item{bmr}{[\code{\link{BenchmarkResult}}]\cr
 Benchmark result.}
+
+\item{task.ids}{[\code{character(1)}]\cr
+Restrict result to certain tasks.
+Default is all.}
+
+\item{learner.ids}{[\code{character(1)}]\cr
+Restrict result to certain learners.
+Default is all.}
 }
 \value{
-[\code{character}].
+[\code{list}].
 }
 \description{
-Gets the task IDs used in a benchmark experiment.
+A list of lists containing all \code{\link{WrappedModel}}s trained in the benchmark experiment.
+
+If \code{models} is \code{FALSE} in the call to \code{\link{benchmark}}, the function will return \code{NULL}.
 }
 \seealso{
 Other benchmark: \code{\link{BenchmarkResult}},
@@ -29,9 +39,10 @@ Other benchmark: \code{\link{BenchmarkResult}},
   \code{\link{getBMRLearnerIds}},
   \code{\link{getBMRLearners}},
   \code{\link{getBMRMeasureIds}},
-  \code{\link{getBMRMeasures}}, \code{\link{getBMRModels}},
+  \code{\link{getBMRMeasures}},
   \code{\link{getBMRPerformances}},
   \code{\link{getBMRPredictions}},
+  \code{\link{getBMRTaskIds}},
   \code{\link{getBMRTuneResults}},
   \code{\link{plotBMRBoxplots}},
   \code{\link{plotBMRRanksAsBarChart}},
