@@ -6,6 +6,10 @@ mlr_new:
 - removed learners: classif.randomForestSRCSyn, regr.randomForestSRCSyn
 - the ModelMultiplexer inherits its predict.type from the base learners now
 - check that learners in an ensemble have the same predict.type
+- New function getBMRModels to extract stored models from a benchmark result
+
+- new functions
+-- getBMRModels
 
 new learners
 -- classif.randomForestSRCSyn
